--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>An Interactive Photo Gallery</title>
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="gallery"></div>
-        
+        <div class="gallery">
+
+        </div>      
     </body>
 </html>
