Create js folder & add baguetteBox.js file to it

--- a/index.html
+++ b/index.html
@@ -7,44 +7,45 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-            <div class="gallery">
-                <a href=-"photos/thumbnails/01.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/01.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/02.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/02.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/03.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/03.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/04.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/04.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/05.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/05.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/06.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/06.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/07.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/07.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/08.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/08.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/09.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/09.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/10.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/11.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-                <a href=-"photos/thumbnails/12.jpg" data-caption="Hay Bales">
-                    <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
-                </a>
-            </div>  
-        </main>    
+                <div class="gallery">
+                    <input type="search" id="search" placeholder="Search. . .">
+                    <a href=-"photos/thumbnails/01.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/01.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/02.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/02.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/03.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/03.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/04.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/04.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/05.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/05.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/06.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/06.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/07.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/07.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/08.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/08.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/09.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/09.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/10.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/11.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                    <a href=-"photos/thumbnails/12.jpg" data-caption="Hay Bales">
+                        <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
+                    </a>
+                </div>  
+        <script src="js/baguetteBox.js"></script>
     </body>
 </html>
