remove error(-) from a href path in index.html

--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>An Interactive Photo Gallery</title>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/baguetteBox.min.css">
+
         <link rel="stylesheet" href="css/style.css">
-    </head>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/baguetteBox.min.css">    </head>
     <body>
                 <div class="gallery">
                     <input type="search" id="search" placeholder="Search. . .">
-                    <a href=-"photos/01.jpg" data-lightbox="img-1" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+                    <a href="photos/01.jpg" data-lightbox="img-1" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
                         <img src="photos/thumbnails/01.jpg" alt="Hay field">
                     </a>
-                    <a href=-"photos/02.jpg" data-caption="Hay Bales">
+                    <a href="photos/02.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/02.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/03.jpg" data-caption="Hay Bales">
+                    <a href="photos/03.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/03.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/04.jpg" data-caption="Hay Bales">
+                    <a href="photos/04.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/04.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/05.jpg" data-caption="Hay Bales">
+                    <a href="photos/05.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/05.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/06.jpg" data-caption="Hay Bales">
+                    <a href="photos/06.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/06.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/07.jpg" data-caption="Hay Bales">
+                    <a href="photos/07.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/07.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/08.jpg" data-caption="Hay Bales">
+                    <a href="photos/08.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/08.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/09.jpg" data-caption="Hay Bales">
+                    <a href="photos/09.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/09.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/10.jpg" data-caption="Hay Bales">
+                    <a href="photos/10.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/11.jpg" data-caption="Hay Bales">
+                    <a href="photos/11.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
                     </a>
-                    <a href=-"photos/12.jpg" data-caption="Hay Bales">
+                    <a href="photos/12.jpg" data-caption="Hay Bales">
                         <img src="photos/thumbnails/10.jpg" alt="A hay field, as far as the eye can see">
                     </a>
                 </div>  
